# harvco-temp-sensor

./: .gitignore  ARCHITECTURE.md  CONVENTIONS.md  INTRODUCTION.md  README.md  harvco.code-workspace  hello.py
api_service/: .dockerignore  ARCHITECTURE.md  Dockerfile  main.py  pyproject.toml
api_service/app/: main.py
api_service/app/api/: deps.py
api_service/app/api/api_v1/: api.py
api_service/app/api/api_v1/endpoints/: devices.py  login.py  readings.py  users.py
api_service/app/core/: config.py  deps.py  security.py
api_service/app/crud/: __init__.py  base.py  crud_device.py  crud_reading.py  crud_token.py  crud_user.py
api_service/app/db/: __init__.py  base.py  session.py
api_service/app/models/: __init__.py  device.py  reading.py  token.py  user.py
api_service/app/schemas/: device.py  reading.py  token.py  user.py
api_service/app/tests/: test_security.py
api_service/scripts/: create_superuser.py
api_service/tests/: conftest.py
api_service/tests/crud/: test_crud_device.py  test_crud_reading.py  test_crud_token.py  test_crud_user.py
api_service/tests/security/: test_security.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f543fcaad00_add_reading_model_with_type_support.py  95efd6426c9c_add_refresh_token_and_user_relationships.py  9c17177c3600_fix_datetime_in_db.py
backend/api_service/: main.py
backend/api_service/api/api_v1/: api.py
backend/api_service/core/: config.py  security.py
backend/api_service/crud/: __init__.py  base.py  crud_device.py
backend/ingestion_service/: main.py  mqtt_client.py
backend/models/: reading.py  token.py
backend/schemas/: device.py  reading.py  token.py  user.py
backend/scripts/: create_superuser.py
backend/src/: config.py
backend/src/api_service/: Dockerfile  main.py
backend/src/api_service/api/: deps.py
backend/src/api_service/api/api_v1/: api.py
backend/src/api_service/api/api_v1/endpoints/: devices.py  login.py  readings.py  users.py
backend/src/api_service/core/: security.py
backend/src/api_service/crud/: base.py  crud_device.py  crud_reading.py  crud_token.py  crud_user.py
backend/src/db/: __init__.py  session.py
backend/src/ingestion_service/: main.py  message_processor.py  mqtt_client.py
backend/src/models/: base.py  reading.py
backend/tests/: conftest.py  test_config.py
backend/tests/api/: test_readings_offsets.py
backend/tests/crud/: test_crud_device.py  test_crud_reading.py  test_crud_reading_time.py  test_crud_token.py  test_crud_user.py
backend/tests/security/: test_security.py
mqtt_ingestion_service/: .dockerignore  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-entrypoint.sh  main.py  message_processor.py  mqtt_client.py  pyproject.toml
mqtt_ingestion_service/alembic/: env.py  script.py.mako
mqtt_ingestion_service/alembic/versions/: 7a24577ad39b_add_calibration_offsets.py  d81f9c4b8544_add_relationships.py
mqtt_ingestion_service/models/: __init__.py  device.py  token.py  user.py
mqtt_ingestion_service/schemas/: device.py  reading.py
shared/: pyproject.toml  setup.py
shared/alembic/: env.py
shared/models/: device.py  reading.py
shared/schemas/: __init__.py  device.py  reading.py  user.py
(+31 files in other folders)
