[project]
name = "api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.4",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-multipart>=0.0.20",
    "ruff>=0.8.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.34.0",
]
