[project]
name = "harvco-temps-backend"
version = "0.2.0"
description = "Harvco Sensor Hub - IoT temperature sensors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.3.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.4",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "ruff>=0.8.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "pytest-asyncio>=0.25.0",
]
