[project]
name = "mqtt_ingestion_service"
version = "0.1.0"
description = "Harvco Temperature Sensor - IoT temperature sensors - MQTT ingestion service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio-mqtt>=0.16.2",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared" }
