[project]
name = "mqtt_ingestion_service"
version = "0.1.0"
description = "Harvco Sensor Hub - IoT temperature sensors - MQTT ingestion service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.3.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.4",
    "sqlalchemy[asyncio]>=2.0.36",
]
