[project]
name = "shared"
version = "0.1.0"
description = "Harvco Temperature Sensor - IoT temperature sensors - Shared models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "pydantic>=2.10.4",
    "setuptools>=75.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
